--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ display:block;
 //    disaply:inline;
 //    background-color:#161616;
 //    position:fixed;
-    border:1px solid white;
+//    border:1px solid white;
 }
 
 nox-tut-menu ul {
